# bruin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: agent-native-design.md
e2e/: fixtures.ts  tsconfig.json
e2e/page-objects/: AppPage.ts
e2e/setup/: tauri-mock.js
e2e/specs/: 01-app-launch.spec.ts  02-note-crud.spec.ts  03-search.spec.ts  04-tags.spec.ts  05-workspace.spec.ts  06-settings-theme.spec.ts  07-tag-ops.spec.ts  08-editor-content.spec.ts  09-activity.spec.ts  10-graph.spec.ts  100-context-menu-state-transitions.spec.ts  101-note-list-search-in-trash.spec.ts  102-webhook-last-triggered-display.spec.ts  103-note-sort-order-by-updated-at.spec.ts  (+114 more)
mcp-server/: package-lock.json  package.json
mobile/: app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
site/: index.html  robots.txt  sitemap.xml  style.css
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activity.rs  agents.rs  export.rs  files.rs  mod.rs  notes.rs  search.rs  settings.rs  sync.rs  tags.rs  tasks.rs  templates.rs  webhooks.rs  workflows.rs  workspaces.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/markdown/: frontmatter.rs  mod.rs  tags.rs
src-tauri/src/sync/: icloud.rs  mod.rs  reconciler.rs  watcher.rs
(+127 files in other folders)
