[package]
name = "bruin"
version = "0.1.0"
edition = "2021"

[lib]
name = "bruin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "7"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
regex = "1"
yaml-rust2 = "0.9"
log = "0.4"
env_logger = "0.11"
